# public

./: .gitignore  CMakeLists.txt  ELO_DASHBOARD.md  LICENSE  README.md  build.yml  gauntlet.yml  log.txt
.github/workflows/: clone_from_private.yml  dispatch_training.yml  merge.yml  micro_train.yml  promote.yml  receive_release.yml  release.yml  scheduler.yml  selfplay.yml  sprt.yml  stockfish_gauntlet.yml  sync_to_private.yml  sync_to_public.yml  train.yml
scripts/: arena_pool.py  checkpoint_resume.py  enhanced_telemetry.py  fishtest_queue.py  generate_games.py  hard_mining.py  learned_pruning.py  merge_dataset.py  neural_guided_search.py  opening_book.py  opening_curriculum.py  policy_network.py  promote.py  repo_sync.py  run_sprt.py  search_instability.py  sprt_test.py  spsa_tune.py  train_nnue.py
src/: async_search.cpp  async_search.h  bitboard.cpp  bitboard.h  board.cpp  board.h  datapipeline.cpp  datapipeline.h  eval.cpp  eval.h  history.cpp  history.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  multi_network.cpp  multi_network.h  neural_syzygy.cpp  neural_syzygy.h  nnue.cpp  nnue.h  reductions.cpp  reductions.h  search.cpp  search.h  search_telemetry.cpp  search_telemetry.h  see.cpp  see.h  selfplay_curriculum.cpp  selfplay_curriculum.h  simd.cpp  simd.h  syzygy.cpp  syzygy.h  test_suite.cpp  test_suite.h  thread.cpp  (+10 more)
tests/: test_bitboard.cpp  test_perft.cpp
